Fixed about drop down to have a scroll bar when content overflows the screen.

--- a/assets/css/pages/home.styl
+++ b/assets/css/pages/home.styl
@@ -23,18 +23,23 @@ body.home
       right: 0
       bottom: footer-height
       left: 0
+      z-index: 1
 
    #about-wrap
       position: absolute
       top: header-height
+      height: auto
       width: 100%
-      z-index: 60
-      height: 0
+      bottom: footer-height
 
       #about
          display: none
          position: relative
          width: 100%
+         max-height: 100%
+         overflow-x: hidden
+         overflow-y: auto
+         z-index: 60
 
          .inner
             padding: 16px
@@ -43,8 +48,7 @@ body.home
             border: 1px solid #C9C9C9
             dropshadow: 0px 2px 5px rgba(0,0,0,.2), inset 1px 1px 3px rgba(0,0,0,.3), inset -1px 1px 3px rgba(0,0,0,.3)
             line-height: 1.2em
-
-
+            
             .logo
                text-align: center
                margin-bottom: 12px
@@ -72,7 +76,8 @@ body.home
       #sad-face
          display: block
          font-size: 6.8em
-         margin-bottom: 12px
+         margin-bottom: 14px
          
       #message
-         font-size: .9em
+         font-size: .8em
+         line-height: 1.1em
